--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,11 +1,20 @@
 .container{
-    height: 100px;
+    height: 150px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 40px;
 }
 
 .logo{
     font-size: 30px;
     font-weight: bold;
 }
+
+
+@media (max-width: 768px) {
+    .container {
+      margin-bottom: 0;
+    }
+}
+
